tabella non centrata hr non rosso

--- a/index.html
+++ b/index.html
@@ -7,16 +7,48 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body class="centro">
-    <h3>Eminem <span>&hearts;</span></h3>
+    <h3>Eminem <span class="rosso">&hearts;</span></h3>
     <hr>
     <h1>His friends</h1>
-    <table border=”1” cellspacing=”0” cellpadding=”20px>
-        <tbody>
-            <tr>
-                <th>Name</th>
-                <th>Image</th>
-            </tr>
-        </tbody>
-    </table>
+    <section>
+        <table border="1" cellspacing="0" cellpadding="20px">
+            <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Image</th>
+                    </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="nomi">Bizarre</td>
+                    <td><img class="em" src="./images/bizaree.jpg" alt="Bizarre"></td>
+                </tr>
+                <tr>
+                    <td class="nomi">Proof</td>
+                    <td><img class="em" src="./images/proof.jpg" alt="Proof"></td>
+                </tr>
+                <tr>
+                    <td class="nomi">Dr. Dre</td>
+                    <td><img class="em" src="./images/dr dre.jpg" alt="Dr. Dre"></td>
+                </tr>
+                <tr>
+                    <td class="nomi">50 Cent</td>
+                    <td><img class="em" src="./images/50 cent.jpg" alt="50 Cent"></td>
+                </tr>
+                <tr>
+                    <td class="nomi">Obi Trice</td>
+                    <td><img class="em" src="./images/obi trice.jpg" alt="Obi Trice"></td>
+                </tr>
+                <tr>
+                    <td class="nomi">Royce 5'9</td>
+                    <td><img class="em" src="./images/Royce.jpg" alt="Royce 5'9"></td>
+                </tr>
+                <tr>
+                    <td class="nomi">Debbie</td>
+                    <td>Image Not Available</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
 </body>
 </html>
