--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="centro">
     <h3>Eminem <span class="rosso">&hearts;</span></h3>
-    <hr>
+    <hr class="rosso">
     <h1>His friends</h1>
     <section>
         <table border="1" cellspacing="0" cellpadding="20px">
